TGR-1625: Revert "TGR-1625: Parse OCSP Responses"